# audio-language-trainer

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIO_MODULE_GUIDE.md  CLAUDE.md  README.md  audio_language_trainer_code.py  firestore.md  flashcard_tutorial_generator.py  gcs_cache_manager.py  main.py  project_setup.sh  pyproject.toml  requirements.txt  test_firestore_connection.py  test_phrase_generation.py  test_story.json  upload_styles.py
.claude/: settings.json
chat/: conversation_practice.html  duolaingo_conversation_practice.html  index.html  main.py  old_index.html  requirements.txt
data/: 1000_vocab_list.json  1000_vocab_usage.json  LM1000-Pack01.txt  LM1000-Pack02.txt  LM1000-Pack03.txt  LM1000-Pack04.txt  LM1000-Pack05.txt  LM1000-Pack06.txt  LM1000-Pack07.txt  LM1000-Pack08.txt  LM1000-Pack09.txt  LM1000-Pack10.txt  LM1000-Pack11.txt  LM1000-Pack12.txt  LM1000-Pack13.txt  LM1000-Pack14.txt  LM1000-Pack15.txt  LM1000_verbs.txt  LM1000_verbs_MASTER.txt  LM1000_vocab.txt  LM2000-0-10.txt  LM2000-10-20.txt  LM2000-10-20b.txt  LM2000-20-30.txt  LM2000-30-40.txt  LM2000-Pack01-story.json  LM2000-Pack05.txt  LM2000_verbs copy.txt  LM2000_verbs.txt  LM2000_vocab.txt  LM3000_verbs_MASTER.txt  LM3000_vocab_MASTER.txt  Trouble_24_subtitle_phrases_10_verbs_50_vocab.txt  all_chap23.txt  all_chap45.txt  chapter20m.txt  dialogue_record.txt  english.srt  example longmon json.txt  gcse-french-english-verbs.txt  (+31 more)
docs/: anki_tools_guide.md  wiktionary_guide.md
examples/: create_anki_deck_example.py
notebooks/: 00 Phrase data preparation.ipynb  04 Anki Deck.ipynb  (+66 more)
(+237 files in other folders)
