[project]
name = "audio-language-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "anki>=25.7.2",
    "anthropic>=0.71.0",
    "azure-cognitiveservices-speech>=1.46.0",
    "beautifulsoup4>=4.14.2",
    "elevenlabs>=2.18.0",
    "fastapi>=0.119.0",
    "genanki>=0.13.1",
    "google-auth>=2.41.1",
    "google-cloud-aiplatform>=1.121.0",
    "google-cloud-core>=2.4.3",
    "google-cloud-firestore>=2.20.0",
    "google-cloud-language>=2.14.0",
    "google-cloud-texttospeech>=2.19.0",
    "google-cloud-translate>=3.16.0",
    "httpx>=0.28.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "mutagen>=1.47.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "proto-plus==1.24.0.dev1",
    "pycountry>=24.6.1",
    "pydantic>=2.12.3",
    "pydub>=0.25.1",
    "pysnooper>=1.2.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]
